--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <section class="heroImg">
       <div class="content">
-        <img src="../UX_UI_HW_18/Images/IMG_0379.JPG" id="selfPortrait">
+        <img src="../-UX_UI_HW_19/Images/IMG_0379.JPG" id="selfPortrait">
         <h1>
             I'm Kegan Padot
         </h1>
@@ -31,6 +31,12 @@
             a UX/UI researcher and designer. I have a passion for designing inclusively seamless interactive experiences, borne from a love of discovering how to improve products and services the world uses. From webpage design to building apps from scratch, my communication skills and love of data analysis make me a steadfast presence on any team.
         </p>
         <button>Download Resume</button>
+      </div>
+      <div class="javascriptArrow">
+        <img src="../-UX_UI_HW_19/Images/figma_arrow.png">
+        <h2>
+          Scroll down for more!
+        </h2>
       </div>
     </section>
     <h1 class="heading" id="mySkillsHeading">
@@ -41,7 +47,7 @@
             My Skills
         </h1>
       <div>
-        <img src="../UX_UI_HW_18/Images/web-design.png">
+        <img src="../-UX_UI_HW_19/Images/web-design.png">
         <h3>
             Design Skills
         </h3> 
@@ -59,7 +65,7 @@
         </p>
       </div>
       <div>
-        <img src="../UX_UI_HW_18/Images/community.png">
+        <img src="../-UX_UI_HW_19/Images/community.png">
         <h3>
             Interpersonal Skills
         </h3>
@@ -72,7 +78,7 @@
         </p>
       </div>
       <div>
-        <img src="../UX_UI_HW_18/Images/developer.png">
+        <img src="../-UX_UI_HW_19/Images/developer.png">
         <h3>
             Technical Skills
         </h3>
@@ -92,7 +98,7 @@
         </h1>
       <div class="workGrid">
         <div class="img1">
-          <img src="../UX_UI_HW_18/Images/SALPR Shot.png">
+          <img src="../-UX_UI_HW_19/Images/SALPR Shot.png">
         </div>
         <div class="content1">
             <h4>
@@ -106,7 +112,7 @@
         </button>
         </div>
         <div class="img2">
-          <img src="../UX_UI_HW_18/Images/Plantasia Home.png">
+          <img src="../-UX_UI_HW_19/Images/Plantasia Home.png">
         </div>
         <div class="content2">
           <h4>
@@ -129,4 +135,11 @@
       </ul>
     </footer>
   </body>
+  <script type = "text/javascript" 
+  src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+</script>
+<script type = "text/javascript" 
+  src = "https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js">
+</script>
+<script src="../-UX_UI_HW_19/JS/index.js"></script>
 </html>
